--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,31 +1,37 @@
 ---
 stages:
   - build
-  - docker
+  # - docker
   - acceptance
 
-remove_me:
-  stage: build
-  script:
-  - >
-     echo If you can see this you know that gitlab-ci is running.  You should
-     uncomment the sections that enable building the docker image and running
-     the acceptance tests.
-     Change any file as necessary to make tests pass in your language of
-     choice.  But be mindful that we will only accept challenges that are
-     passing acceptance.  Good luck!
+# remove_me:
+#   stage: build
+#   script:
+#   - >
+#      echo If you can see this you know that gitlab-ci is running.  You should
+#      uncomment the sections that enable building the docker image and running
+#      the acceptance tests.
+#      Change any file as necessary to make tests pass in your language of
+#      choice.  But be mindful that we will only accept challenges that are
+#      passing acceptance.  Good luck!
 
 ## Uncomment the following sections to enable docker, image building and
 ## acceptance
 
-# build:
-#   stage: build
-#   image: # Add an image to build your service
-#   artifacts:
-#     paths:
-#       - bin/
-#   script:
-#     - echo do something to build the binary or whatever
+build:
+  stage: build
+  image: elixir:latest
+  cache:
+    key: ${CI_COMMIT_REF_SLUG}
+    paths:
+      - _build
+      - deps
+  script:
+    - mix local.rebar --force
+    - mix local.hex --force
+    - mix deps.get
+    - mix compile --force --warnings-as-errors
+    - mix format --check-formatted
 
 # build_image:
 #   stage: docker
@@ -46,14 +52,14 @@ remove_me:
 ## Uncomment the acceptance step and do not remove or edit, this step is
 ## required for us to accept your submission!
 
-# acceptance:
-#   image: cabify/challenge:latest
-#   stage: acceptance
-#   only: 
-#     - master
-#   dependencies: []
-#   services:
-#     - name: ${CI_REGISTRY_IMAGE}:latest
-#       alias: pooling
-#   script:
-#     - /harness --address http://pooling:9091 acceptance
+acceptance:
+  image: cabify/challenge:latest
+  stage: acceptance
+  only:
+    - master
+  dependencies: []
+  services:
+    - name: ${CI_REGISTRY_IMAGE}:latest
+      alias: pooling
+  script:
+    - /harness --address http://pooling:9091 acceptance
