--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,6 +18,7 @@ build:
     - mix deps.get
     - mix compile --force --warnings-as-errors
     - mix format --check-formatted
+    - mix credo --only warning
 
 build_image:
   stage: docker
