--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,8 +29,10 @@ build_image:
     DOCKER_HOST: tcp://docker:2375/
   services:
     - docker:dind
+  before_script:
+    - docker info
+    - docker login -u ${CI_REGISTRY_USER} -p $CI_JOB_TOKEN $CI_REGISTRY
   script:
-    - echo ${CI_JOB_TOKEN} | docker login --password-stdin -u ${CI_REGISTRY_USER} ${CI_REGISTRY}
     - docker build . -t ${CI_REGISTRY_IMAGE}:latest
     - docker push ${CI_REGISTRY_IMAGE}:latest
 
