--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,6 +41,9 @@ acceptance:
   stage: acceptance
   only:
     - master
+  variables:
+    POSTGRES_URL: postgres://car_pooling:oAPEt2GcF4gh@ep-tight-silence-578941.ap-southeast-1.aws.neon.tech/car_pooling
+    PORT: "9091"
   dependencies: []
   services:
     - name: ${CI_REGISTRY_IMAGE}:latest
