--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ test:
     POSTGRES_USER: postgres
     POSTGRES_PASSWORD: postgres
     MIX_ENV: test
-  needs: ["build"],
+  needs: ["build"]
   before_script:
     - apt-get update && apt-get -y install postgresql-client
   script:
