--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,6 @@
 ---
 stages:
   - build
-  - test
   - docker
   - acceptance
 
@@ -48,8 +47,13 @@ build_image:
     DOCKER_DRIVER: overlay2
     DOCKER_TLS_CERTDIR: ''
     DOCKER_HOST: tcp://docker:2375/
+    POSTGRES_DB: car_pooling_dev
+    POSTGRES_HOST: postgres
+    POSTGRES_USER: postgres
+    POSTGRES_PASSWORD: postgres
   services:
     - docker:dind
+    - postgres:latest
   before_script:
     - docker info
     - docker login -u ${CI_REGISTRY_USER} -p $CI_JOB_TOKEN $CI_REGISTRY
