--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,26 +20,6 @@ build:
     - mix format --check-formatted
     - mix credo --only warning
 
-test:
-  stage: test
-  image: elixir:latest
-  services:
-    - name: postgres:latest
-      alias: postgres-test
-  variables:
-    POSTGRES_DB: database
-    POSTGRES_HOST: postgres
-    POSTGRES_USER: postgres
-    POSTGRES_PASSWORD: postgres
-    MIX_ENV: test
-  before_script:
-    - apt-get update && apt-get -y install postgresql-client
-    - mix local.rebar --force
-    - mix local.hex --force
-    - mix deps.get
-  script:
-    - mix test test/car_pooling_web/controllers/status_controller_test.exs
-
 build_image:
   stage: docker
   image: docker:latest
@@ -52,8 +32,8 @@ build_image:
     POSTGRES_USER: postgres
     POSTGRES_PASSWORD: postgres
   services:
-    - docker:dind
-    - postgres:latest
+    - name: docker:dind
+    - name: postgres:latest
   before_script:
     - docker info
     - docker login -u ${CI_REGISTRY_USER} -p $CI_JOB_TOKEN $CI_REGISTRY
