--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,44 +1,24 @@
 ---
 stages:
-  # - build
+  - build
   - docker
   - acceptance
 
-# build:
-#   stage: build
-#   image: elixir:latest
-#   cache:
-#     key: ${CI_COMMIT_REF_SLUG}
-#     paths:
-#       - _build
-#       - deps
-#   script:
-#     - mix local.rebar --force
-#     - mix local.hex --force
-#     - mix deps.get
-#     - mix compile --force --warnings-as-errors
-#     - mix format --check-formatted
-#     - mix credo --only warning
-
-# test:
-#   stage: test
-#   image: elixir:latest
-#   services:
-#     - name: postgres:latest
-#       alias: postgres-test
-#   variables:
-#     POSTGRES_DB: database
-#     POSTGRES_HOST: postgres
-#     POSTGRES_USER: postgres
-#     POSTGRES_PASSWORD: postgres
-#     MIX_ENV: test
-#   before_script:
-#     - apt-get update && apt-get -y install postgresql-client
-#     - mix local.rebar --force
-#     - mix local.hex --force
-#     - mix deps.get
-#   script:
-#     - mix test test/car_pooling_web/controllers/status_controller_test.exs
+build:
+  stage: build
+  image: elixir:latest
+  cache:
+    key: ${CI_COMMIT_REF_SLUG}
+    paths:
+      - _build
+      - deps
+  script:
+    - mix local.rebar --force
+    - mix local.hex --force
+    - mix deps.get
+    - mix compile --force --warnings-as-errors
+    - mix format --check-formatted
+    - mix credo --only warning
 
 build_image:
   stage: docker
